2026-01-04T12:31:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20692938049 # 1407
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-04
* notice: last 14d: unq all: 23 29
* notice: prev accum: outdated-unq outdated-all / unq all: 5194 10241 / 5220 10272
* notice: next accum: outdated-unq outdated-all / unq all: 5196 10243 / 5220 10272
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-20] / []

2026-01-03T12:30:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20677284615 # 1405
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-03
* notice: last 14d: unq all: 25 31
* notice: prev accum: outdated-unq outdated-all / unq all: 5192 10239 / 5220 10272
* notice: next accum: outdated-unq outdated-all / unq all: 5194 10241 / 5220 10272
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-19] / []

2026-01-03T01:13:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20670111907 # 1404
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-03
* notice: last 14d: unq all: 27 33
* notice: prev accum: outdated-unq outdated-all / unq all: 5191 10238 / 5220 10272
* notice: next accum: outdated-unq outdated-all / unq all: 5192 10239 / 5220 10272
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-18] / []

2026-01-02T01:18:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20648680544 # 1402