@@ -1,3 +1,12 @@
+2026-01-28T17:43:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21449161633 # 1408
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-28
+* notice: last 14d: unq all: 65 316
+* notice: prev accum: outdated-unq outdated-all / unq all: 5196 10243 / 5220 10272
+* notice: next accum: outdated-unq outdated-all / unq all: 5220 10272 / 5291 10588
+* notice: prev exec diff / last date diff / accum: unq all: +71 +316 -0 -0 / +30 +230 -0 -0 / 30 230
+* notice: removed / changed dates: [2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29 2025-12-30 2025-12-31 2026-01-01 2026-01-02 2026-01-03] / [2026-01-14 2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-27]
+
 2026-01-04T12:31:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20692938049 # 1407
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-04
